# llm-pricing

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: main.rs
