[package]
name = "llm-pricing"
version = "0.2.7"
edition = "2021"
description = "A CLI tool to visualize OpenRouter model pricing in a clean, tabular format"
license = "MIT"
repository = "https://github.com/tekacs/llm-pricing"
authors = ["tekacs"]
keywords = ["llm", "pricing", "openrouter", "cli", "ai"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
